Need more contrast on emoji, and fix rounding errors on IE

--- a/css/map.css
+++ b/css/map.css
@@ -118,10 +118,10 @@ h1 .beta {
   left: 50%;
   margin-top: -64px;
   margin-left: -88px;
-  background-color: rgba(237, 29, 36, 0.95);
-  border-radius: 4px;
+  border: 3px solid rgba(237, 29, 36, 1);
+  border-radius: 6px;
+  background-color: rgba(244, 244, 244, 0.99);
   z-index: 1000;
-  color: white;
 }
 
 #pin::before {
@@ -132,14 +132,19 @@ h1 .beta {
   left: 50%;
   margin-left: -24px;
   border: 24px solid transparent;
-  border-top-color: rgba(237, 29, 36, 0.95);
+  border-top-color: rgba(237, 29, 36, 1);
   z-index: 1000;
+  pointer-events: none;
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 
 #emojis {
   text-align: center;
   font-size: 3em;
-  line-height: 64px;
+  line-height: 58px;
 }
 
 img.emojione {
